fix header on mobile

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -64,6 +64,7 @@ body {
       margin: 0;
       .name {
         padding-bottom: 12px;
+        width: 100%;
       }
       .pages {
         width: 100%;
